<resources>
    <string name="app_name">Real Estate Manager</string>
    <string name="enter_email_edittext">Email</string>
    <string name="enter_password_edittext">Password</string>
    <string name="loginTextview">Login</string>
    <string name="create_account_text">Create Account</string>
    <string name="forgot_password_text">Forgot Password</string>
    <string name="surface">   Surface Area </string>
    <string name="of_rooms">  Rooms</string>
    <string name="address">   Address</string>
    <string name="status">    Status </string>
    <string name="add_listing">Add Listing</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_of_listing">Select Type of Listing</string>
    <string name="price_of_property_usd">Price of property (USD)</string>
    <string name="price_of_property_usd_short">Price (USD)</string>
    <string name="price_of_property_euro">Price of property (EURO)</string>
    <string name="down_payment_usd">Down Payment (USD)</string>
    <string name="down_payment_euro">Down Payment (EURO)</string>
    <string name="enter_surface_area_in_m2">Surface Area</string>
    <string name="number_of_rooms">  Number Of rooms </string>
    <string name="description_of_listing">Description of Listing</string>
    <string name="choose_image">Choose Image</string>
    <string name="upload_image">Upload Image</string>
    <string name="image_description">Image Description</string>
    <string name="address_city_state_country">Address / City / State / Country</string>
    <string name="points_of_interest">Points of Interest Nearby</string>
    <string name="status_of_property_sold_or_for_sale">Status of Property (Sold or For Sale)</string>
    <string name="date_put_on_market">  Date For Sale ("MM-dd-yyyy")</string>
    <string name="date_put_on_market_non_american">  Date For Sale ("dd-MM-yyyy")</string>
    <string name="date_sold_hint">  Date Sold ("MM-dd-yyyy")</string>
    <string name="date_sold_hint_non_american">  Date Sold ("dd-MM-yyyy")</string>
    <string name="name_of_real_estate_agent_selling_property">Name of Real Estate Agent</string>
    <string name="save_listing">Save Listing</string>
    <string name="useremail">UserEmail</string>
    <string name="logout">Logout</string>
    <string name="edit_listing">Edit Listing</string>
    <string name="update_listing">Update Listing</string>
    <string name="search_listings">Search Listings</string>
    <string name="filter_listings">Filter Listings</string>
    <string name="filter">Filter</string>
    <string name="price">Price</string>
    <string name="surface_area">Surface Area</string>
    <string name="number_of_photos">Number Of Photos</string>
    <string name="been_on_market_within">Been on Market Since</string>
    <string name="school">School</string>
    <string name="restaurant">Restaurant</string>
    <string name="hospital">Hospital</string>
    <string name="bar">Bar</string>
    <string name="park">Park</string>
    <string name="been_sold_since">Been Sold Since</string>
    <string name="points_of_interest_nearby">Points of Interest Nearby</string>
    <string name="apply">Apply</string>
    <string name="close_me">Cancel</string>
    <string name="location">Location</string>
    <string name="city_state_or_country">City, State or Country</string>
    <string name="_500">500</string>
    <string name="date">Date</string>
    <string name="_1000000_00">1000000.00</string>
    <string name="_0_0">0.00</string>
    <string name="_0_">0</string>
    <string name="_10_">10</string>
    <string name="_100_">100</string>
    <string name="_100000_0">100000.0</string>
    <string name="static_maps_api_key">AIzaSyCjjNtiV2d0NKjAmJk-G6Sge8LLQe58f4A</string>
    <string name="location_disabled_message">Your location is disabled, do you want to enable it?</string>
    <string name="denied_permission_string">Location permission is required to view your location, please enable it in settings</string>
    <string name="reset_filters">Reset filters</string>
    <string name="sign_in_as_guest">SIGN IN AS GUEST</string>
    <string name="loan_simulator_title">Loan Simulator</string>
    <string name="loan_property_price">Property Price</string>
    <string name="down_payment">Down Payment</string>
    <string name="loan_number_of_years">Number of Years</string>
    <string name="interest_rate">Interest Rate</string>
    <string name="percent_symbol">%</string>
    <string name="calculate">Calculate</string>
    <string name="cancel">Cancel</string>
    <string name="total_loan_amount">Total Loan Amount:</string>
    <string name="total_interest_being_paid">Total Interest Being Paid:</string>
    <string name="monthly_payment">Monthly Payment:</string>
    <string name="loan_simulator">Loan Simulator</string>
    <string name="dollar_symbol">$</string>
    <string name="euro_symbol">€</string>
    <string name="please_select_listing_string">Please select a listing to view its details</string>

</resources>
