<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activities.MainActivity">

    <item
        android:id="@+id/userEmailItem"
        android:title="@string/useremail"
        app:showAsAction="never"></item>

    <item
        android:id="@+id/logoutItem"
        android:title="@string/logout"
        app:showAsAction="never"
        android:icon="@drawable/logouticon"></item>

    <item
        android:id="@+id/loanSimulatorItem"
        android:title="@string/loan_simulator"
        app:showAsAction="never"
        android:icon="@drawable/loan_simulator_icon"></item>

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/search_icon"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView"
        android:title="@string/search_listings"
        android:tooltipText="@string/search_listings" />

    <item
        android:id="@+id/action_filter"
        app:showAsAction="always|collapseActionView"
        android:icon="@drawable/filter_icon"
        android:title="@string/filter_listings"></item>
</menu>