<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/loanSimulatorScreen"
    android:background="@color/myWhite">


    <Button
        android:id="@+id/calculateLoanButton"
        android:layout_width="220dp"
        android:layout_height="58dp"
        android:text="@string/calculate"
        app:backgroundTint="@color/myGreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.894"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.566" />

    <Button
        android:id="@+id/cancelLoanCalculatorButton"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:text="@string/cancel"
        app:backgroundTint="@color/myRed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.566" />

    <TextView
        android:id="@+id/totalLoanAmountDisplay"
        android:layout_width="107dp"
        android:layout_height="34dp"
        android:gravity="center"
        android:text=""
        android:textColor="@color/myBlack"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.884"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.79" />

    <TextView
        android:id="@+id/totalLoanAmountTextview"
        android:layout_width="206dp"
        android:layout_height="34dp"
        android:gravity="center"
        android:text="@string/total_loan_amount"
        android:textColor="@color/myBlack"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.79" />

    <TextView
        android:id="@+id/monthlyPaymentDisplay"
        android:layout_width="107dp"
        android:layout_height="69dp"
        android:gravity="center"
        android:text=""
        android:textColor="@color/myBlack"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.884"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.924" />

    <TextView
        android:id="@+id/monthlyPaymentTextview"
        android:layout_width="206dp"
        android:layout_height="34dp"
        android:gravity="center"
        android:text="@string/monthly_payment"
        android:textColor="@color/myBlack"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.893" />

    <TextView
        android:id="@+id/loanInterestRateTextview"
        android:layout_width="128dp"
        android:layout_height="31dp"
        android:gravity="center"
        android:text="@string/interest_rate"
        android:textColor="@color/myBlack"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.435" />

    <TextView
        android:id="@+id/loanNumberOfyearsTextview"
        android:layout_width="128dp"
        android:layout_height="31dp"
        android:gravity="center"
        android:text="@string/loan_number_of_years"
        android:textColor="@color/myBlack"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.317" />

    <TextView
        android:id="@+id/loanDownPaymentTextview"
        android:layout_width="128dp"
        android:layout_height="31dp"
        android:gravity="center"
        android:hint="@string/price_of_property_usd"
        android:text="@string/down_payment"
        android:textColor="@color/myBlack"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.212" />

    <TextView
        android:id="@+id/loanSimulatorTitle"
        android:layout_width="204dp"
        android:layout_height="26dp"
        android:gravity="center"
        android:text="@string/loan_simulator_title"
        android:textColor="@color/myBlack"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/loanPropertyPriceTextview"
        android:layout_width="128dp"
        android:layout_height="31dp"
        android:gravity="center"
        android:text="@string/loan_property_price"
        android:textColor="@color/myBlack"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.111" />

    <TextView
        android:id="@+id/totalInterestBeingPaidTextview"
        android:layout_width="206dp"
        android:layout_height="34dp"
        android:gravity="center"
        android:text="@string/total_interest_being_paid"
        android:textColor="@color/myBlack"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.675" />

    <TextView
        android:id="@+id/totalInterestBeingPaidDisplay"
        android:layout_width="107dp"
        android:layout_height="34dp"
        android:gravity="center"
        android:text=""
        android:textColor="@color/myBlack"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.884"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.675" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/loanInterestRateEditText"
        android:layout_width="189dp"
        android:layout_height="58dp"
        android:hint="@string/percent_symbol"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.914"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.433" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/loanNumberOfYearsEdittext"
        android:layout_width="189dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.922"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.312" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/loanDownPaymentEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/down_payment_usd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.871"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.201" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/loanPropertyPriceEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/price_of_property_usd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.922"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101" />
</androidx.constraintlayout.widget.ConstraintLayout>